[workspace]
members = [
  "contracts/*",
  "packages/*",
  "scripts",
]
# Enable the version 2 feature resolver, which avoids unifying features for targets that are not being built
#
# Critically this prevents dev-dependencies from enabling features even when not building a target that
# uses dev-dependencies, e.g. the library crate. This in turn ensures that we can catch invalid feature
# flag combinations that would otherwise only surface in dependent crates
#
# Reference - https://doc.rust-lang.org/nightly/cargo/reference/features.html#feature-resolver-version-2
# See - https://github.com/apache/arrow-rs/pull/1822/files
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = []
edition = "2021"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Keep as is until TendermintStake updates.
[workspace.dependencies]
abstract-sdk = {version = "0.6.1", git =  "https://github.com/Abstract-OS/contracts.git"}
abstract-api = {version = "0.6.1", git =  "https://github.com/Abstract-OS/contracts.git"}
abstract-app = {version = "0.6.1", git =  "https://github.com/Abstract-OS/contracts.git"}
abstract-os = {version = "0.6.1", git =  "https://github.com/Abstract-OS/contracts.git"}
abstract-boot = {version = "0.6.1", git =  "https://github.com/Abstract-OS/contracts.git"}
forty-two = { version = "0.2.0", path = "packages/forty-two" }
forty-two-boot = { version = "0.2.0", path = "packages/forty-two-boot" }
cosmwasm-std = { version = "1.1" }
cosmwasm-schema = { version = "1.1" }
cw-asset = {git = "https://github.com/CyberHoward/cw-asset.git" }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cw-storage-plus = "0.16.0"
cw-controllers = "0.16.0"
cw-paginate = {git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v1.0.0"}
cosmwasm-storage = { version = "1.1" }

cw-utils = "0.16"
cw20 = "0.16"

cw2 = "0.16"
cw20-base = "0.16"
anyhow = { version = "1.0.51" }
cw-multi-test = "0.16"


rstest = "0.16.0"
speculoos = "0.11.0"

astroport = {git = "https://github.com/astroport-fi/astroport-core.git"}

# dev dependencies
tokio = { version = "1.4", features = ["full"] }
semver = { version = "1.0"}
dotenv = "0.15.0"
env_logger = "0.10.0"

log = "0.4.14"

# boot-core = { version = "0.5.1" }
# boot-cw-plus = "0.5.1"
boot-core = { version = "0.5.1", git =  "https://github.com/Abstract-OS/BOOT.git"}
boot-cw-plus = { version = "0.5.1",  git =  "https://github.com/Abstract-OS/BOOT.git"}

clap =  { version = "4.0.32", features = ["derive"] }
