[workspace]
members = ["contracts/*", "packages/*", "scripts"]
# Enable the version 2 feature resolver, which avoids unifying features for targets that are not being built
#
# Critically this prevents dev-dependencies from enabling features even when not building a target that
# uses dev-dependencies, e.g. the library crate. This in turn ensures that we can catch invalid feature
# flag combinations that would otherwise only surface in dependent crates
#
# Reference - https://doc.rust-lang.org/nightly/cargo/reference/features.html#feature-resolver-version-2
# See - https://github.com/apache/arrow-rs/pull/1822/files
resolver = "2"

[workspace.package]
version = "0.9.2"
authors = []
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#  Keep as is until TendermintStake updates.
[workspace.dependencies]

## Abstract dependencies
abstract-sdk = { version = "0.19.2" }
abstract-app = { version = "0.19.2" }
abstract-core = { version = "0.19.2" }
abstract-interface = { version = "0.19.3" }
abstract-testing = { version = "0.19.2" }

## Abstract API
abstract-dex-adapter = { git = "https://github.com/AbstractSDK/abstract.git", tag = "v0.19.2", default-features = false }
abstract-cw-staking = { git = "https://github.com/AbstractSDK/abstract.git", tag = "v0.19.2", default-features = false }

# Dev Abstract dependencies
wyndex-bundle = { git = "https://github.com/AbstractSDK/abstract.git", tag = "v0.19.2" }
autocompounder = { path = "contracts/autocompounder" }
fee-collector = { path = "contracts/fee-collector" }

# main dependencies
cosmwasm-std = { version = "1.1" }
cosmwasm-schema = { version = "1.1" }
cw-asset = { version = "3.0" }
schemars = "0.8"
serde = { version = "1.0", default-featcuures = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
cw-storage-plus = "1.0.1"
cw-controllers = "1.0.1"
cw-paginate = { git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v1.0.0" }
cosmwasm-storage = { version = "1.1" }
cw-utils = "1.0.1"
cw20-base = { git= "https://github.com/abstractsdk/cw-plus", features = [
  "library",
], version = "1.0.1", rev="258fb95" }
cw-plus-interface = { git= "https://github.com/abstractsdk/cw-plus", version = "0.1.0", rev="258fb95" }
cw20 = { git= "https://github.com/abstractsdk/cw-plus", version = "1.0.1", rev="258fb95" }
cw2 = { git= "https://github.com/abstractsdk/cw-plus", version = "1.0.1", rev="258fb95" }
anyhow = { version = "1.0.51" }
cw-multi-test = "0.16"
rstest = "0.16.0"
speculoos = "0.11.0"
cfg-if = "1.0.0"

# dev dependencies
tokio = { version = "1.4", features = ["full"] }
semver = { version = "1.0" }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.14"
clap = { version = "4.0.32", features = ["derive"] }
cw-orch = { version = "0.16.5" }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
panic = "abort"
codegen-units = 1
incremental = false
