[package]
name = "scripts"
version.workspace = true
edition.workspace= true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forty-two-boot = { workspace = true }

boot-core = { workspace = true , features = ["daemon"] }
boot-cw-plus = { workspace = true }
abstract-boot = { workspace = true, features = ["daemon"] }

log = {workspace = true }
cosmwasm-std = { workspace = true }
anyhow = "1.0"
serde_json = "1.0.79"
serde = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
semver = { workspace = true }
abstract-cw-staking-api = { git = "https://github.com/Abstract-OS/apis.git", package = "abstract-cw-staking-api", tag = "v0.14.0" }
abstract-core = { workspace = true }
forty-two = { workspace = true, features = ["boot"] }
tokio = { workspace = true }
clap = { workspace = true }
speculoos = { workspace = true }
