[package]
name = "scripts"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cw20-base = { workspace = true }
cw20 = { workspace = true }
cw-asset = { workspace = true }
cw-orch = { workspace = true, features = ["daemon", "osmosis-test-tube"] }
abstract-interface = { workspace = true, features = ["daemon"] }
cw-utils = { workspace = true }

cw-plus-interface = { workspace = true }

thiserror = { workspace = true }
log = { workspace = true }
cosmwasm-std = { workspace = true }
anyhow = { workspace = true }
serde_json = "1.0.79"
serde = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
semver = { workspace = true }
abstract-cw-staking = { workspace = true, features = ["interface"] }
abstract-dex-adapter = { workspace = true }
abstract-core = { workspace = true }
abstract-client = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
speculoos = { workspace = true }
autocompounder = { workspace = true, features = ["interface"] }
fee-collector = { workspace = true, features = ["interface"] }
cw1-general = { git = "https://github.com/MbBrainz/cw-plus.git", features = [
  "interface",
], rev = "44431592ddad1ccfff654bcab8f0c8818518521c" }
