[package]
name = "ac-standalone"
description = "Autocompounder allows for autocompounding of LP positions. Built on Abstract."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
export = []
default = ["export", "astroport"]
interface = [
  "export",
  "dep:abstract-interface",
  "dep:cw-orch",
  "dep:anyhow",
  "cw20/interface",
  "cw20-base/interface",
]
kujira = [ "dep:kujira"]
astroport = ["dep:astroport"]
osmosis = ["dep:osmosis-std"]

[dependencies]
cosmwasm-std = { workspace = true, features = ["stargate"] }
cw-asset = { workspace = true }
cw-controllers = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
protobuf = { version = "3.3", features = ["with-bytes"] }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true, features = ["library"] }
schemars = "0.8"
serde = { workspace = true }
thiserror = { workspace = true }

astroport = { version = "3.6.1", optional = true }
kujira = { version = "0.8.2", optional = true}
osmosis-std = { version = "=0.19.2", optional = true }

abstract-interface = { workspace = true, optional = true }
cw-orch = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
anybuf = "0.1.0"

[dev-dependencies]
wyndex-bundle = { workspace = true }
wyndex-stake = { git = "https://github.com/cosmorama/wynddex.git", rev = "v1.1.2" }
ac-standalone = { path = ".", features = ["interface"] }
abstract-interface = { workspace = true, features = ["daemon"] }
cw-orch = { workspace = true, features = ["daemon"] }
cosmrs = "0.15.0"

cw-plus-interface = { workspace = true }
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
rstest = { workspace = true }
speculoos = { workspace = true }
semver = { workspace = true, features = ["serde"] }
tokio = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }

[profile.release]
lto = true
debug = false
debug-assertions = false
opt-level = "s"
overflow-checks = true
panic = "abort"
rpath = false
