[package]
name = "autocompounder"
description = "Autocompounder allows for autocompounding of LP positions. Built on Abstract."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []
schema = ["abstract-app/schema"]

[dependencies]
cosmwasm-std = { workspace = true }
cw-asset = { workspace = true }
cw-controllers = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
protobuf = { version = "2", features = ["with-bytes"] }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true, features = ["library"] }
schemars = "0.8.1"
serde = { workspace = true }
thiserror = { version = "1.0.21" }

abstract-app = { version = "0.14" }
abstract-sdk = { version = "0.14" }
abstract-dex-api = { workspace = true, default-features = false}
abstract-cw-staking-api = { workspace = true, default-features = false }
forty-two = { workspace = true }

[dev-dependencies]
forty-two-boot = { path = "../../packages/forty-two-boot" }
forty-two = { workspace = true, features = ["boot"] }
wyndex-bundle = { git = "https://github.com/Abstract-OS/integration-bundles.git", tag = "v0.14.0" }
abstract-dex-api = { workspace = true, features = ["juno", "boot"] }
abstract-cw-staking-api = { workspace = true, features = ["juno", "boot"] }
abstract-boot = { workspace = true, features = ["daemon"] }
abstract-testing = { workspace = true }
boot-cw-plus = { workspace = true }

cw-multi-test = { workspace = true }
anyhow = { workspace = true }
rstest = { workspace = true }
speculoos = { workspace = true }
semver = { workspace = true, features = ["serde"] }
tokio = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }

[profile.release]
lto = true
debug = false
debug-assertions = false
opt-level = "s"
overflow-checks = false
panic = "abort"
rpath = false
