[package]
name = "autocompounder"
description = "Autocompounder allows for autocompounding of LP positions. Built on Abstract."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# backtraces = ["cosmwasm-std/backtraces"]
export = []
default = ["export"]
schema = ["abstract-app/schema"]
interface = [
  "export",
  "dep:abstract-interface",
  "dep:abstract-client",
  "dep:cw-orch",
  "dep:anyhow",
  "abstract-dex-adapter/interface",
  "abstract-cw-staking/interface",
  "cw20/interface",
  "cw20-base/interface",
]
kujira = []
test-tube = [
  "cw-orch/osmosis-test-tube",
  "abstract-dex-adapter/osmosis",
  "abstract-cw-staking/osmosis",
]

[dependencies]
cosmwasm-std = { workspace = true, features = ["stargate"] }
cw-asset = { workspace = true }
cw-controllers = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
protobuf = { version = "2", features = ["with-bytes"] }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true, features = ["library"] }
schemars = "0.8"
serde = { workspace = true }
thiserror = { workspace = true }
kujira = { version = "0.8.2" }

abstract-app = { workspace = true }
abstract-sdk = { workspace = true }
abstract-dex-adapter = { workspace = true, default-features = false }
abstract-cw-staking = { workspace = true, default-features = false }

abstract-interface = { workspace = true, optional = true }
abstract-client = { workspace = true, optional = true }
cw-orch = { workspace = true, optional = true }
abstract-core = { workspace = true }
anyhow = { workspace = true, optional = true }
anybuf = "0.1.0"

[dev-dependencies]
wyndex-bundle = { workspace = true }
wyndex-stake = { git = "https://github.com/cosmorama/wynddex.git", rev = "v1.1.2" }
autocompounder = { path = ".", features = ["interface"] }
abstract-dex-adapter = { workspace = true, features = [
  "interface",
  "testing",
  "wynd",
] }
abstract-cw-staking = { workspace = true, features = [
  "interface",
  "testing",
  "wynd",
] }
abstract-interface = { workspace = true, features = ["daemon"] }
abstract-testing = { workspace = true }
abstract-core = { workspace = true }
abstract-client = { workspace = true }
cw-orch = { workspace = true, features = ["daemon"] }
cosmrs = { version = "0.15.0", features = ["rpc"] }
test-case = "3.2.1"
cw-plus-interface = { workspace = true }
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
rstest = { workspace = true }
speculoos = { workspace = true }
semver = { workspace = true, features = ["serde"] }
tokio = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
serial_test = "3.0.0"
