[package]
name = "cw-staking"
description = "Cw-staking is a Abstract api for staking tokens by 4t2 Finance."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
juno = ["dep:wasmswap", "dep:cw20_junoswap", "dep:cw20-stake", "dep:wyndex", "dep:wyndex-stake", "dep:cw-controllers"]
osmosis = ["library", "dep:osmosis-std"]
terra = ["dep:astroport"]
pisco-1 = ["dep:astroport-testnet"]


[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
abstract-sdk = { workspace = true }
abstract-api = { workspace = true }
cw-asset = { workspace = true }
forty-two = { workspace = true }

# Juno dexes
cw20-stake = { git = "https://github.com/DA0-DA0/dao-contracts.git", optional = true, features = ["library"], tag = "v1.0.0" }
cw20_junoswap = { package = "cw20", version = "0.10.0", optional = true }
wasmswap = { git = "https://github.com/Wasmswap/wasmswap-contracts", tag = "v1.1.2-beta", features = [
  "library",
], optional = true }
wyndex = {git = "https://github.com/cosmorama/wynddex.git", optional = true}
wyndex-stake = {git = "https://github.com/cosmorama/wynddex.git", optional = true, features = ["library"] }
cw-controllers = {workspace = true, optional = true}
cw-utils = {workspace = true}
# Terra dexes
cw20 = { workspace = true }

dao-cw-utils = {version = "0.13.4", package = "cw-utils" }
# dao-cw20 = {version = "0.13.4", package = "cw20" }

# Osmosis
osmosis-std = { version = "0.12.0", optional = true }

# Astroport
astroport = { workspace = true, optional = true }
astroport-testnet = { workspace = true, optional = true }

[dev-dependencies]
# dev dependencies
tokio = { workspace = true }
semver = { workspace = true, default-features = false }
anyhow = {  workspace = true }
dotenv = {  workspace = true }
env_logger = {  workspace = true }

forty-two-boot = { workspace = true }

boot-core = { workspace = true , features = ["daemon"] }
abstract-boot = { workspace = true }
abstract-api = { workspace = true, features = ["schema"] }
clap = { workspace = true }
log = { workspace = true }
