[package]
name = "fee-collector-app"
description = "Fee collector app"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]

# Enable the version 2 feature resolver, which avoids unifying features for targets that are not being built
#
# Critically this prevents dev-dependencies from enabling features even when not building a target that
# uses dev-dependencies, e.g. the library crate. This in turn ensures that we can catch invalid feature
# flag combinations that would otherwise only surface in dependent crates
#
# Reference - https://doc.rust-lang.org/nightly/cargo/reference/features.html#feature-resolver-version-2
# See - https://github.com/apache/arrow-rs/pull/1822/files
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
interface = ["export", "dep:abstract-boot", "dep:boot-core"]
schema = ["abstract-app/schema"]

[dependencies]
cosmwasm-std = { workspace = true }
cw-asset = { workspace = true }
cw-controllers = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = {workspace = true }
protobuf = { version = "2", features = ["with-bytes"] }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true, features = ["library"] }
schemars = "0.8.1"
serde = { workspace = true }

abstract-core = { version = "0.14" }
abstract-app = { version = "0.14" }
abstract-sdk = { version = "0.14" }
# TODO: once stable, this should be updated to the stable release
boot-core = { version = "0.10.0", optional = true }
boot-cw-plus = { git = "https://github.com/AbstractSDK/cw-orchestrator.git", tag = "v0.10.2" }

abstract-boot = { version = "0.14", optional = true }
abstract-dex-api = { workspace=true, default-features = false }
cw-multi-test = "0.16"

[dev-dependencies]
anyhow = { workspace = true }
boot-core = { version = "0.10", features = ["daemon"] }
fee-collector-app = { path = ".", features = [
  "interface",
], package = "fee-collector-app" }
speculoos = "0.11.0"
abstract-boot = { version = "0.14", features = ["daemon"] }
abstract-testing = { version = "0.14" }
semver = "1.0"
tokio = { version = "1.4", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
clap = { version = "4.0.32", features = ["derive"] }
abstract-sdk = { version = "0.14", features = ["test-utils"] }
wyndex-bundle = { git = "https://github.com/AbstractSDK/integration-bundles.git", tag = "v0.3.1" }
abstract-dex-api = { workspace = true, features = [
  "juno",
  "boot",
  "export",
] }
abstract-cw-staking-api = { workspace = true, features = [
  "juno",
  "boot",
  "export",
] }
