[package]
name = "fee-collector"
description = "Fee collector app"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]

# Enable the version 2 feature resolver, which avoids unifying features for targets that are not being built
#
# Critically this prevents dev-dependencies from enabling features even when not building a target that
# uses dev-dependencies, e.g. the library crate. This in turn ensures that we can catch invalid feature
# flag combinations that would otherwise only surface in dependent crates
#
# Reference - https://doc.rust-lang.org/nightly/cargo/reference/features.html#feature-resolver-version-2
# See - https://github.com/apache/arrow-rs/pull/1822/files
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
interface = ["export", "dep:abstract-interface", "dep:cw-orch","abstract-app/interface-macro"]
schema = ["abstract-app/schema"]

[dependencies]
cosmwasm-std = { workspace = true }
cw-asset = { workspace = true }
cw-controllers = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
protobuf = { version = "2", features = ["with-bytes"] }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true, features = ["library"] }
schemars = "0.8"
serde = { workspace = true }

abstract-core = { workspace = true }
abstract-app = { workspace = true }
abstract-sdk = { workspace = true }
cw-orch = { workspace = true, optional = true }

abstract-interface = { workspace = true, optional = true }
abstract-dex-adapter = { workspace = true, default-features = false }

[dev-dependencies]
anyhow = { workspace = true }
wyndex-bundle = { workspace = true }
cw-orch = { workspace = true, features = ["daemon"] }
fee-collector = { path = ".", features = [
  "interface",
], package = "fee-collector" }
speculoos = "0.11.0"
abstract-interface = { workspace = true, features = ["daemon"] }
abstract-testing = { workspace = true }
semver = "1.0"
tokio = { version = "1.4", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
clap = { version = "4.0.32", features = ["derive"] }
abstract-sdk = { workspace = true, features = ["test-utils"] }

abstract-dex-adapter = { workspace = true, features = ["testing", "interface"] }
abstract-cw-staking = { workspace = true, features = ["testing", "interface"] }
